stdout
compiling CircularBufferTest.cpp
compiling AllTests.cpp
compiling CircularBuffer.c
CircularBuffer.c: In function 'CircularBuffer_Get':
CircularBuffer.c:63:2: error: 'intoutalue' undeclared (first use in this function)
   63 |  intoutalue=self->values[self->output_index];
      |  ^~~~~~~~~~
compilation terminated due to -Wfatal-errors.
make: *** [/cpputest/build/MakefileWorker.mk:525: objs/CircularBuffer.o] Error 1
